WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281946
LAYER_POSITIONS_ASSERT(*repaintRects() == renderer().rectsForRepaintingAfterLayout(repaintContainer.get(), RepaintOutlineBounds::Yes)); on
https://gregbenzphotography.com/hdr-gain-map-gallery
https://bugs.webkit.org/show_bug.cgi?id=281946
Summary
LAYER_POSITIONS_ASSERT(*repaintRects() == renderer().rectsForRepaintingAfterL...
Matt Woodrow
Reported
2024-10-22 20:26:04 PDT
Crash when hovering the mouse over the dropdown panels.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-22 20:26:16 PDT
<
rdar://problem/138451742
>
Matt Woodrow
Comment 2
2024-10-22 20:29:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35603
EWS
Comment 3
2024-10-23 16:30:46 PDT
Committed
285627@main
(ecad604cdd3b): <
https://commits.webkit.org/285627@main
> Reviewed commits have been landed. Closing PR #35603 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug