LAYER_POSITIONS_ASSERT(*repaintRects() == renderer().rectsForRepaintingAfterLayout(repaintContainer.get(), RepaintOutlineBounds::Yes)); on https://gregbenzphotography.com/hdr-gain-map-gallery https://bugs.webkit.org/show_bug.cgi?id=281946 <rdar://138451742>

Reviewed by Simon Fraser.

Changing overflow visibility affects the repaints of all descendants (that share
the same repaint container, which isn't tracked by the current dirty bits). The
existing marking (based on layout) only marked the children of the changed
layer, not all descendants.

* LayoutTests/fast/layers/overflow-change-crash-expected.html: Added.
* LayoutTests/fast/layers/overflow-change-crash.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):

Canonical link: https://commits.webkit.org/285627@main